--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -184,6 +184,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <script src="{% static 'js/dates.js' %}"></script>
+  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
   <script type="text/javascript">
 var limit = 2;
 $('input.single-checkbox').on('change', function(evt) {
@@ -192,5 +193,7 @@ $('input.single-checkbox').on('change', function(evt) {
   }
 });
   </script>
+  {% block js %}
+  {% endblock %}
 </body>
 </html>
