--- a/RVFS/account/templates/add_address.html
+++ b/RVFS/account/templates/add_address.html
@@ -16,6 +16,6 @@
         <p class="form-font"><label class="text-standard">{{ form.city.label }}:</label><br>{{ form.city }}</p>
         <p class="form-font"><label class="text-standard">{{ form.state.label }}:</label><br>{{ form.state }}</p>
         <p class="form-font"><label class="text-standard">{{ form.main.label }}:</label><br>{{ form.main }}</p>
-        <input class="button text-standard" type="submit" value="Add">
+        <input class="btn btn-secondary text-standard" type="submit" value="Add">
     </form>
 {% endblock %}
