--- a/RVFS/account/templates/change_address.html
+++ b/RVFS/account/templates/change_address.html
@@ -57,6 +57,6 @@
             {% endif %}
         {% endfor %}
         </div>
-    <input class="button text-standard" type="submit" value="Update">
+    <input class="btn btn-secondary text-standard" type="submit" value="Update">
     </form>
 {% endblock %}
