--- a/RVFS/account/templates/edit_account.html
+++ b/RVFS/account/templates/edit_account.html
@@ -34,6 +34,6 @@
             <input type="text" name="birthday" value="{{ account.birth_day }}"></input>
             </div>
         </div>
-    <input class="button text-standard" type="submit" value="Update">
+    <input class="btn btn-secondary text-standard" type="submit" value="Update">
     </form>
 {% endblock %}
