--- a/RVFS/account/templates/info-form.html
+++ b/RVFS/account/templates/info-form.html
@@ -9,7 +9,7 @@
     {% for field in form %}
         <p class="form-font"><label class="text-standard">{{ field.label }}:</label><br>{{ field }}</p>
     {% endfor %}
-    <input class="button text-standard" type="submit" value="Login*">
+    <input class="btn btn-secondary text-standard" type="submit" value="Login*">
     <p class="disclaimer text-standard">* By submmiting this for you verify and consent to the unserstanding that you are above the age of 18, this verification is required for the purchase of knives from this site as they are weapons and physical harm may result from the improper use of these tools.</p>
   </form>
 {% endblock %}
