--- a/RVFS/catalog/templates/checkout_complete.html
+++ b/RVFS/catalog/templates/checkout_complete.html
@@ -4,8 +4,10 @@
 
 {% block body %}
 <h1 class="text-standard">Your checkout is complete!</h1>
-<p class="text-standard">Your order number is #{{ order.id }}.</p>
+<h3 class="text-standard">Your order number is #{{ order }}</h3>
+<p class="text-standard">Items will ship in approximatly 4 weeks.</p>
 <p class="text-standard">You will recieve an email with tracking info once your item is shipped. </p>
-<p class="text-standard">This info and that status of your order will be available on your account page if you registered.</p>
+<p class="text-standard">This info and the status of your order will be available on your account page if you are registered.</p>
 <p class="text-standard">Thank you for shopping at Ravenmoore Valley Forge and Metalworks.</p>
+<p class="text-standard">Find us on any of our social media for updates and productt announcments.</p>
 {% endblock %}
