--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -21,7 +21,7 @@
       <div class="col-10 content-back">
         <nav class="navbar navbar-expand-md navbar-light">
           <div class="row header header-small">
-            <div class="col-md-auto banner-text">
+            <div id="firstandpike" class="col-md-auto banner-text">
               <div class="row">
                 <div class="col">
                   <img class="banner-img" src="{% static 'RVFM logo.png' %}">
@@ -123,9 +123,11 @@
             <div class="w-100">
               <div id="collapse-right" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add a Product</a></li>
-                  <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add a Service</a></li>
-                  <li class="nav-item text-standard {% if nbar == 'list' %}active{% endif %}"><a class="nav-link" href="{% url 'list' %}">All Items</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add Product</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add Service</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'list' %}active{% endif %}"><a class="nav-link" href="{% url 'list' %}">Items</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'order' %}active{% endif %}"><a class="nav-link" href="{% url 'orders' %}">Orders</a></li>
+                  <li class="nav-item text-standard"><a class="nav-link" href="{% url 'update' %}">Update Slides</a></li>
                 {% if user.is_superuser %}
                   <li class="nav-item text-standard"><a class="nav-link" href="{% url 'admin:login' %}">Admin</a></li>
                 {% endif %}
