--- a/RVFS/RVFS/templates/rvfsite/home.html
+++ b/RVFS/RVFS/templates/rvfsite/home.html
@@ -21,11 +21,11 @@ Home
     {% for pic in random_pics %}
         {% if forloop.revcounter0 %}
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="{{ pic.webContentLink }}">
+          <img class="d-block img-fluid" src="{{ pic.image.url }}">
         </div>
         {% else %}
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="{{ pic.webContentLink }}">
+          <img class="d-block img-fluid" src="{{ pic.image.url }}">
         </div>
         {% endif %}
     {% endfor %}
