--- a/RVFS/catalog/templates/cart.html
+++ b/RVFS/catalog/templates/cart.html
@@ -1,199 +1,238 @@
 {% extends 'rvfsite/base.html' %}
 {% load thumbnail %}
 {% load mathfilters %}
+{% load static %}
 
 {% block title %}Cart{% endblock %}
 
 {% block body %}
-<h2 class="text-standard">Cart</h2>
-<div class="row acc-row">
-{% if cart %}
-    {% if prods %}
-    <h3 class="text-standard">Products:</h3>
-    <ul class="row acc-list-row">
-    {% for item in prods %}
-        {% if forloop.counter|mod:4 == 0 %}
-        </ul>
+<form enctype="multipart/form-data" method="post">
+    {% csrf_token %}
+    <h2 class="text-standard">Cart</h2>
+    <div class="row acc-row">
+    {% if cart %}
+        {% if prods %}
+        <h3 class="text-standard">Products:</h3>
         <ul class="row acc-list-row">
-            <li class="card account-list">
-                <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                    <div class="row">
-                        <div class="col">
-                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
-                            <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                            {% endthumbnail %}
-                        </div>
-                        <div class="col">
-                            {% for field, value in item.items %}
-                                {% if field == 'item' %}
-                                <h4 class="text-standard">{{ value }}</h4>
-                                {% elif field in item_fields %}
-                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
-                                {% endif %}
-                            {% endfor %}
-                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                        </div>
-                    </div>
-                </a>
-            </li>
-        {% else %}
-            <li class="card account-list">
-                <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                    <div class="row">
-                        <div class="col">
-                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+        {% for item in prods %}
+            {% if forloop.counter0|mod:4 == 0 %}
+            </ul>
+            <ul class="row acc-list-row">
+                <li class="card account-list">
+                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
+                        <div class="row">
+                            <div class="col">
+                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
                                 <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                            {% endthumbnail %}
+                                {% endthumbnail %}
+                                {% for field, value in item.items %}
+                                    {% if field == 'item' %}
+                                    <h4 class="text-standard">{{ value.name }}</h4>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="col">
+                                {% for field, value in item.items %}
+                                    {% if field in item_fields %}
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                    {% endif %}
+                                {% endfor %}
+                                <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                            </div>
                         </div>
-                        <div class="col">
-                            {% for field, value in item.items %}
-                                {% if field == 'item' %}
-                                <h4 class="text-standard">{{ value.name }}</h4>
-                                {% elif field in item_fields %}
-                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
-                                {% endif %}
-                            {% endfor %}
-                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                        </div>
-                    </div>
-                </a>
-            </li>
-        {% endif %}
-    {% endfor %}
-    </ul>
-    {% endif %}
-    {% if servs %}
-    <h3 class="text-standard">Services:</h3>
-    <ul class="row acc-list-row">
-    {% for item in servs %}
-        {% if forloop.counter|mod:4 == 0 %}
-        </ul>
-        <ul class="row acc-list-row">
-            <li class="card account-list">
-                <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                    <div class="row">
-                        <div class="col">
-                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
-                            <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                            {% endthumbnail %}
-                        </div>
-                        <div class="col">
-                            {% for field, value in item.items %}
-                                {% if field == 'item' %}
-                                <h4 class="text-standard">{{ value }}</h4>
-                                {% elif field in item_fields %}
-                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
-                                {% endif %}
-                            {% endfor %}
-                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                        </div>
-                    </div>
-                </a>
-            </li>
-        {% else %}
-            <li class="card account-list">
-                <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                    <div class="row">
-                        <div class="col">
-                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
-                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                            {% endthumbnail %}
-                        </div>
-                        <div class="col">
-                            {% for field, value in item.items %}
-                                {% if field == 'item' %}
-                                <h4 class="text-standard">{{ value.name }}</h4>
-                                {% elif field in item_fields %}
-                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
-                                {% endif %}
-                            {% endfor %}
-                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                        </div>
-                    </div>
-                </a>
-            </li>
-        {% endif %}
-    {% endfor %}
-    </ul>
-    {% endif %}
-{% else %}
-<h5 class="w-100 text-standard">Your cart is empty.</h5>
-{% endif %}
-</div>
-<div class="w-100">
-    <h3 class="text-right text-standard">Total: $
-        {% if account.cart_total %}
-            {% if account.cart_total.endswith == 0 %}
-                {{ account.cart_total }}0
+                    </a>
+                </li>
             {% else %}
-                {{ account.cart_total }}
+                <li class="card account-list">
+                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
+                        <div class="row">
+                            <div class="col">
+                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                    <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                                {% endthumbnail %}
+                                {% for field, value in item.items %}
+                                    {% if field == 'item' %}
+                                    <h4 class="text-standard">{{ value.name }}</h4>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="col">
+                                {% for field, value in item.items %}
+                                    {% if field in item_fields %}
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                    {% endif %}
+                                {% endfor %}
+                                <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                            </div>
+                        </div>
+                    </a>
+                </li>
             {% endif %}
-        {% else %}
-        0
+        {% endfor %}
+        </ul>
         {% endif %}
-    </h3>
-</div>
-{% if account.cart_total %}
-<div class="w-100 d-flex">
-    <div id="paypal-button-container" class="ml-auto"></div>
-</div>
-{% endif %}
+        {% if servs %}
+        <h3 class="text-standard">Services:</h3>
+        <ul class="row acc-list-row">
+        {% for item in servs %}
+            {% if forloop.counter0|mod:4 == 0 %}
+            </ul>
+            <ul class="row acc-list-row">
+                <li class="card account-list">
+                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
+                        <div class="row">
+                            <div class="col">
+                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                                {% endthumbnail %}
+                                {% for field, value in item.items %}
+                                    {% if field == 'item' %}
+                                    <h4 class="text-standard">{{ value.name }}</h4>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="col">
+                                {% for field, value in item.items %}
+                                    {% if field in item_fields %}
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                    {% endif %}
+                                {% endfor %}
+                                {% if item.item.commission_fee %}
+                                <h5 class="text-standard">${{ item.item.commission_fee }} fee</h5>
+                                {% endif %}
+                                {% if item.item.price_range %}
+                                <h5 class="text-standard">${{ item.item.price_range }} price range</h5>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            {% else %}
+                <li class="card account-list">
+                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
+                        <div class="row">
+                            <div class="col">
+                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                    <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                                {% endthumbnail %}
+                                {% for field, value in item.items %}
+                                    {% if field == 'item' %}
+                                    <h4 class="text-standard">{{ value.name }}</h4>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="col">
+                                {% for field, value in item.items %}
+                                    {% if field in item_fields %}
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                    {% endif %}
+                                {% endfor %}
+                                {% if item.item.commission_fee %}
+                                <h5 class="text-standard">${{ item.item.commission_fee }} fee</h5>
+                                {% endif %}
+                                {% if item.item.price_range %}
+                                <h5 class="text-standard">${{ item.item.price_range }} price range</h5>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            {% endif %}
+        {% endfor %}
+        </ul>
+        {% endif %}
+    {% else %}
+    <h5 class="w-100 text-standard">Your cart is empty.</h5>
+    <div class="placeholder"></div>
+    {% endif %}
+    </div>
+    <div class="w-100">
+        <h3 class="text-right text-standard">Total:
+            {% if account.cart_total %}
+                {% if account.cart_total.endswith == 0 %}
+                    ${{ account.cart_total }}0
+                {% else %}
+                    ${{ account.cart_total }}
+                {% endif %}
+            {% else %}
+            $0
+            {% endif %}
+        </h3>
+    </div>
+    {% if account.cart_total %}
+    <img class="dividor" src="{% static 'arrow-divider.png' %}">
+    <h2 class="text-standard">Shipping Info:</h2>
+    <div class="row acc-row">
+        <ul class="col">
+        {% if user.is_authenticated %}
+            {% if alt_add %}
+            <li class="account-list">
+            <label class="text-standard">Address:</label>
+            <select id="address_name" name="address_name">
+                {% for add in alt_add %}
+                    {% if add.main %}
+                    <option value="{{ add }}" selected="selected">{{ add.name }}</option>
+                    {% else %}
+                    <option value="{{ add }}">{{ add.name }}</option>
+                    {% endif %}
+                {% endfor %}
+            </select>
+            </li>
+            {% endif %}
+        {% endif %}
+        <li class="account-list">
+        <label class="text-standard">First Name:</label>
+        <br>
+        <input id="first_name" type="text" name="first_name" value="{% if info %}{{ info.first }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Last Name:</label>
+        <br>
+        <input id="last_name" type="text" name="last_name" value="{% if info %}{{ info.last }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Email:</label>
+        <br>
+        <input id="email" type="text" name="email" value="{% if info %}{{ info.email }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Address Line 1:</label>
+        <br>
+        <input id="add_1" type="text" name="add_1" value="{% if shipping %}{{ shipping.address1 }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Address Line 2:</label>
+        <br>
+        <input id="add_2" type="text" name="add_2" value="{% if shipping %}{{ shipping.address2 }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">City:</label>
+        <br>
+        <input id="city" type="text" name="city" value="{% if shipping %}{{ shipping.city }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">State:</label>
+        <br>
+        <input id="state" type="text" name="state" value="{% if shipping %}{{ shipping.state }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Zip Code:</label>
+        <br>
+        <input id="zip" type="text" name="zip" value="{% if shipping %}{{ shipping.zip_code }}{% endif %}">
+        </li>
+        </ul>
+    </div>
+    <div class="w-100 d-flex">
+        <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue to Checkout">
+    </div>
+    {% endif %}
+</form>
 {% endblock %}
 
+{% if alt_add %}
 {% block js %}
-<script>
 
-paypal.Button.render({
-  env: 'sandbox', // sandbox | production
+<script src="{% static 'js/add_swap.js' %}"></script>
 
-
-  style: {
-    label: 'checkout',
-    size:  'medium', // small | medium | large | responsive
-    shape: 'rect', // pill | rect
-    color: 'black', // gold | blue | silver | black
-    tagline: false,
-  },
-
-  // PayPal Client IDs - replace with your own
-  // Create a PayPal app: https://developer.paypal.com/developer/applications/create
-
-  client: {
-    sandbox: 'Aa9iJNJgoHU7KRYt_O2Ox8rglbTsnxzpz0JnCChgzC03UMj2Vj4xHRC8LPXYynt3jtdy9TzB3eiQ8l0u',
-    production: '<insert production client id>'
-  },
-
-  commit: true,
-
-  payment: function(data, actions) {
-    return actions.payment.create({
-      payment: {
-        transactions: [
-          {
-            amount: { total: '{{ account.cart_total }}', currency: 'USD' }
-          }
-        ]
-      },
-
-      experience: {
-        input_fields: {
-            {% if user.is_authenticated %}
-          no_shipping: 1
-            {% else %}
-          no_shipping: 0
-            {% endif %}
-        }
-      }
-    });
-  },
-
-  onAuthorize: function(data, actions) {
-    return actions.payment.execute().then(function() {
-      window.location.replace("{% url 'check_comp' %}");
-    });
-  }
-
-}, '#paypal-button-container');
-
-</script>
 {% endblock %}
+{% endif %}
