--- a/RVFS/catalog/templates/product.html
+++ b/RVFS/catalog/templates/product.html
@@ -4,7 +4,7 @@
 {% block title %}{{ product.name }}{% endblock %}
 
 {% block body %}
-<form method="post">
+<form enctype="multipart/form-data" method="post">
     {% csrf_token %}
     <h2 class="text-standard">{{ product.name }}</h2>
     <div class="row item-container">
